# hrf-universe-home-task

./: README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
home_task/: dao.py  db.py  endpoints.py  models.py  schemas.py
home_task/commands/: populate_data.py
migrations/: README  env.py
migrations/data/: job_posting.csv  standard_job.csv  standard_job_family.csv
migrations/versions/: 21f6a5adb97e_add_job_posting.py  55f1782163fc_add_standard_jobs.py  6eae2e3188cb_created_task_hirestatistic.py  991ecb2bf269_load_data.py
